--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "build": "^0.1.4",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -25,5 +26,6 @@
     "pg": "^8.7.1",
     "pg-promise": "^10.11.0",
     "swagger-jsdoc": "^6.1.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
