--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.2",
     "passport": "^0.4.1",
@@ -31,5 +32,5 @@
     "pg-promise": "^10.11.0",
     "swagger-jsdoc": "^6.1.0"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:3000"
 }
